opam-version: "2.0"
name: "caravand"
version: "0.2"
synopsis: "Bitcoin light node for c-lightning"
description: """
Bitcoin light node for c-lightning with bitcoin-core compatible jsonrpc
"""
maintainer: "Davide Gessa <gessadavide@gmail.com>"
authors: [
  "Davide Gessa <gessadavide@gmail.com>"
]

homepage: "https://github.com/dakk/caravand"
bug-reports: "https://github.com/dakk/caravand/issues"
license: "MIT"
dev-repo: "git+https://github.com/dakk/caravand.git"

build: ["dune" "build" "-p" name "-j" jobs]

depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {build & >= "1.6.0"}
  "base" {build & >= "v0.11.1"}
  "stdio" {build & >= "v0.11.0"}
  "configurator" {build & >= "v0.11.0"}
  
  "bitstring" {>= "3.1.0"}
  "bignum" {>= "v0.10.0"}
  "bitcoinml" {= "0.4.1"}
  "cryptokit" {>= "1.13"}
  "ctypes" {>= "0.14.0"}
  "leveldb" {>= "1.2.0"}
  "stdint" {>= "0.5.1"}
  "yojson" {>= "1.7.0"}

  "ounit" {with-test & >= "2.0.8"}
  "odoc" {with-test & >= "1.3.0"}
  "hex" {with-test & >= "1.3.0"}
]

depexts: [
]

